--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
     "apexcharts": "^5.3.6",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "ng-apexcharts": "^2.0.4",
     "ng-recaptcha": "^13.2.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.26.16",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "^0.16.0"
   },
   "devDependencies": {
