--- a/angular.json
+++ b/angular.json
@@ -33,18 +33,34 @@
                 "input": "public"
               },
               "src/assets",
-              "src/WEB-INF"
+              {
+                "glob": "**/*",
+                "input": "src/WEB-INF",
+                "output": "/WEB-INF"
+              },
+              "src/version.json"
             ],
             "styles": [
               "src/styles.scss"
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [
-              "sweetalert2"
+              "sweetalert2",
+              "canvg",
+              "core-js",
+              "rgbcolor",
+              "raf",
+              "html2canvas"
             ]
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
