--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "prestart": "node generate-version.js",
     "start": "ng serve --proxy-config proxy.conf.json",
+    "prebuild": "node generate-version.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:war": "ng build --configuration production --base-href /ctivitae/ && cd dist/concyted-frontend/browser && npx bestzip ../../../ctivitae.war *"
+    "build:war": "node generate-version.js && ng build --configuration production --base-href /ctivitae/ && cd dist/concyted-frontend/browser && npx bestzip ../../../ctivitae.war ."
   },
   "prettier": {
     "printWidth": 100,
